--- a/css/strings.css
+++ b/css/strings.css
@@ -2,10 +2,11 @@
     filename: strings.css
     author: Nathan Allen
     created: 10/5/21
-    purpose:
+    purpose: style to list of ship names
 
 */
 
 div{
     white-space: pre-line;
+    font-size: 24px;
 }
