--- a/css/triggered.css
+++ b/css/triggered.css
@@ -13,6 +13,9 @@ div{
     width: 100px;
     background: black;
     margin: 5px;
+    line-height: 100px;
+    text-align: center;
+    color: white;
 }
 
 p{
